@@ -56,65 +56,3 @@ def build_localized_fieldname(field_name, lang):
 def _build_localized_verbose_name(verbose_name, lang):
     return u'%s [%s]' % (verbose_name, lang)
 build_localized_verbose_name = lazy(_build_localized_verbose_name, unicode)
-
-
-class TranslationFieldDescriptor(object):
-    """A descriptor used for the original translated field."""
-    def __init__(self, name, initial_val="", fallback_value=None):
-        """
-        The ``name`` is the name of the field (which is not available in the
-        descriptor by default - this is Python behaviour).
-        """
-        self.name = name
-        self.val = initial_val
-        self.fallback_value = fallback_value
-        self.loc_field_name = ""
-
-    def __set__(self, instance, value):
-        lang = get_language()
-        loc_field_name = build_localized_fieldname(self.name, lang)
-        # also update the translation field of the current language
-        setattr(instance, loc_field_name, value)
-        # update the original field via the __dict__ to prevent calling the
-        # descriptor
-        instance.__dict__[self.name] = value
-
-    def __get__(self, instance, owner):
-        if not instance:
-            raise ValueError(u"Translation field '%s' can only be accessed "
-                              "via an instance not via a class." % self.name)
-        self.loc_field_name = build_localized_fieldname(self.name,
-                                                        get_language())
-        if hasattr(instance, self.loc_field_name):
-            return getattr(instance, self.loc_field_name) or\
-                   (self.get_default_instance(instance) if\
-                    self.fallback_value is None else\
-                    self.fallback_value)
-
-    def get_default_instance(self, instance):
-        """
-        Returns default instance of the field. Supposed to be overidden by
-        related subclasses.
-        """
-        return instance.__dict__[self.name]
-        
-
-class RelatedTranslationFieldDescriptor(TranslationFieldDescriptor):
-    def __init__(self, name, initial_val="", fallback_value=None):
-        TranslationFieldDescriptor.__init__(self, name, initial_val="",
-                                            fallback_value=None)
-
-    def get_default_instance(self, instance):
-        # TODO: Implement
-        #instance_id = instance.__dict__['%s_id' % self.name]
-        pass
-
-
-class ManyToManyTranslationFieldDescriptor(TranslationFieldDescriptor):
-    def __init__(self, name, initial_val="", fallback_value=None):
-        TranslationFieldDescriptor.__init__(self, name, initial_val="",
-                                            fallback_value=None)
-
-    def get_default_instance(self, instance):
-        # TODO: Implement
-        pass
